# fluffy-couscous

./: .gitignore  AGENTS.md  LICENSE  PLANS.md  README.md  TODO.md  pyproject.toml
docs/: spec_prompt.md
qd_suite/: __init__.py  __main__.py
qd_suite/adapters/: __init__.py  base.py  cnn_raster_adapter.py  contrastive_knn.py  ensemble_cnn_gru.py  ensemble_prob.py  example_dummy.py  gru_adapter.py  transformer_adapter.py
qd_suite/data/: __init__.py  canonicalize.py  dataset.py  download.py  parse_ndjson.py
qd_suite/eval/: __init__.py  confusion.py  default_spec.json  metrics.py  reporting.py  runner.py  scoring.py  spec_schema.json  stress_spec.json  validate_spec.py
qd_suite/models/: __init__.py  cnn_raster.py  contrastive.py  dataset.py  gru_classifier.py  transformer_classifier.py  transformer_encoder.py
qd_suite/repr/: __init__.py  normalize.py  pointseq.py  tokenize.py
qd_suite/transforms/: __init__.py  affine.py  common.py  compound.py  dropout.py  noise.py  prefix.py  reorder.py  resample.py  segment.py  simplify.py
qd_suite/utils/: rasterize.py
runs/dev/: metrics.json  report.md
scripts/: download_quickdraw.py  inspect_sample.py  make_report.py  run_suite.py  train_cnn_raster.py  train_contrastive.py  train_gru.py  train_transformer.py  train_transformer_gpu.sh
tests/: test_parse.py  test_repr.py  test_runner_smoke.py  test_transformer_model.py  test_transforms.py
