[project]
name = "qd-cap-suite"
version = "0.1.0"
description = "QuickDraw stroke-sequence capability evaluation suite scaffolding"
authors = [{ name = "QuickDraw Eval" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
plotting = ["matplotlib>=3.5"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
